test/Fail/Issue3566-3.err
Issue3566-3.agda:14.8-11: error: [UnequalTerms]
(r₁ : R) → P (R.a r₁) !=< A
when checking that the expression R.b has type A
